--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "url": "https://github.com/RavenDevKit/ravencore-message.git"
   },
   "dependencies": {
-    "ravencore-lib": "RavenDevKit/ravencore-lib"
+    "@ravendevkit/ravencore-lib": "^1.0.3"
   },
-  "peerDependencies": {
-  },
+  "peerDependencies": {},
   "devDependencies": {
     "ravencore-build": "RavenDevKit/ravencore-build",
     "brfs": "^1.3.0",
