--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/RavenDevKit/ravencore-message.git"
+    "url": "https://github.com/dataturk/ravencore-message.git"
   },
   "dependencies": {
-    "ravencore-lib": "RavenDevKit/ravencore-lib"
+    "ravencore-lib": "dataturk/ravencore-lib"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "ravencore-build": "RavenDevKit/ravencore-build",
+    "ravencore-build": "dataturk/ravencore-build",
     "brfs": "^1.3.0",
     "chai": "~1.10.0",
     "gulp": "^3.8.10"
